force-app/main/default/objects/Tax_Payer_Details__c/fields/Average_Tax__c.field-meta.xml
<CustomField>
    <fullName>Average_Tax__c</fullName>
    <formula>Total_Tax__c /  Count_tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>