force-app/main/default/objects/Tax_Payer_Details__c/fields/Count_Tax_2015__c.field-meta.xml
<CustomField>
    <fullName>Count_Tax_2015__c</fullName>
    <label>Count Tax 2015</label>
    <summaryFilterItems>
        <field>Tax_Paid_Per_Month__c.Year__c</field>
        <operation>equals</operation>
        <value>2015</value>
    </summaryFilterItems>
    <summaryForeignKey>Tax_Paid_Per_Month__c.Tax_Payer_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>