force-app/main/default/objects/Tax_Payer_Details__c/fields/Count_tax__c.field-meta.xml
<CustomField>
    <fullName>Count_tax__c</fullName>
    <label>Count tax</label>
    <summaryForeignKey>Tax_Paid_Per_Month__c.Tax_Payer_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>