force-app/main/default/objects/Tax_Payer_Details__c/fields/Highest_Tax_2017__c.field-meta.xml
<CustomField>
    <fullName>Highest_Tax_2017__c</fullName>
    <label>Highest Tax 2017</label>
    <summarizedField>Tax_Paid_Per_Month__c.Tax_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Tax_Paid_Per_Month__c.Year__c</field>
        <operation>equals</operation>
        <value>2017</value>
    </summaryFilterItems>
    <summaryForeignKey>Tax_Paid_Per_Month__c.Tax_Payer_Detail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>