force-app/main/default/objects/Tax_Payer_Details__c/fields/Highest_tax_paid__c.field-meta.xml
<CustomField>
    <fullName>Highest_tax_paid__c</fullName>
    <label>Highest tax paid</label>
    <summarizedField>Tax_Paid_Per_Month__c.Tax_Amount__c</summarizedField>
    <summaryForeignKey>Tax_Paid_Per_Month__c.Tax_Payer_Detail__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>