force-app/main/default/objects/Tax_Payer_Details__c/fields/Total_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax__c</fullName>
    <label>Total Tax</label>
    <summarizedField>Tax_Paid_Per_Month__c.Tax_Amount__c</summarizedField>
    <summaryForeignKey>Tax_Paid_Per_Month__c.Tax_Payer_Detail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>